# tree-sitter-agda

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Update  agda-parser.y  appveyor.yml  binding.gyp  go.mod  grammar.js  indentation-rules.md  index.js  old-grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
_corpus/: data.txt  function.txt  module.txt  others.txt  pragma.txt
_corpus/grammar/: field.txt  infix.txt  pragma.txt  record.txt
_corpus/grammar/expression/: record.txt
bindings/c/: tree-sitter-agda.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_agda/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAgda/: agda.h
bindings/swift/TreeSitterAgdaTests/: TreeSitterAgdaTests.swift
corpus/: a.txt  comment.txt  constant.txt  data-signature.txt  data.txt  field.txt  function.txt  infix.txt  lambda.txt  let.txt  module.txt  others.txt  pragma.txt  record.txt  test  test.txt
corpus/agda-stdlib/: Algebra.txt  Level.txt  Size.txt  Strict.txt
corpus/agda-stdlib/IO/: Primitive.txt
corpus/comment/: block.txt  line.txt
corpus/declaration/: abstract.txt  data-signature.txt  data.txt  function.txt  generialize.txt  instance.txt  macro.txt  module.txt  mutual.txt  postulate.txt  primitive.txt  private.txt  record-signature.txt  record.txt  syntax.txt
corpus/expression/: do.txt  lambda.txt  let.txt  record.txt
corpus/grammar/: data.txt  function.txt  infix.txt  module.txt  record.txt
corpus/grammar/expression/: do.txt  lambda.txt  let.txt  record.txt
corpus/module/: anonymous.txt  simple-declaration.txt
corpus/pragma/: built-in.txt  catchall.txt  compile.txt  foreign.txt  no-positivity-check.txt  no-termination-check.txt  polarity.txt  static.txt  termination-check.txt
legacy/: grammar.js
legacy/corpus/: others.txt
legacy/corpus/grammar/: data.txt  (+2 more)
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
stash/: test
test/: example.txt
todo/: let.txt  test.txt
(+5 files in other folders)
