[package]
name = "tree-sitter-agda"
description = "Agda grammar for tree-sitter"
version = "1.3.3"
authors = ["Lua Ting-Gian"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "agda"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-agda"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
